# vk-2026-exam-prep

./: README.md  docker-compose.yaml
cvic-zadanie/config/k8s/: configmap-index.yaml  configmap.yaml  deployment-2-be.yaml  deployment-index.yaml  deployment.yaml  nginx-configmap.yaml  pv.yaml  pvc.yaml  svc-be.yaml  svc.yaml
cvic-zadanie/config/k8s-exam/: configmap-index.yaml  deployment.yaml  pvc.yaml  svc.yaml
cvic-zadanie/config/nginx/: default.conf
cvic-zadanie/config/php-fpm/: Dockerfile
cvic-zadanie/config/rust/: Dockerfile
cvic-zadanie/src/vue-app/: vite.config.js
cvic1/: README.md
cvic1/config/k8s-exam/: configmap.yaml  deployment.yaml  pv.yaml  pvc.yaml  secret.yaml  svc.yaml
cvic1/src/php-app/: db.php  index.php
cvic2/: README.md
cvic2/config/k8s-exam/: configmap.yaml  deployment.yaml  pv.yaml  pvc.yaml  svc.yaml
cvic2/config/nodejs/: Dockerfile
cvic2/src/php-app/: index.php
cvic2/src/rust-app/src/: main.rs
cvic2/src/vue-app/src/components/: HelloWorld.vue
cvic3/: README.md
cvic3/config/apache/: Dockerfile
cvic3/config/k8s-exam/: configmap.yaml  deployment.yaml  pv.yaml  pvc.yaml  svc.yaml
cvic3/src/rust-app/: Cargo.toml
