[package]
name = "rust-hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
# priame deps - pinni ich presne
actix-web = "=4.9.0"
reqwest = { version = "=0.11.27", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "=1.38.2", features = ["full"] }
image = "=0.24.9"

# transitívne piny, ktoré držia build kompatibilný s Rust 1.85.1
actix-http = "=3.11.2"
time = "=0.3.36"
url = "=2.5.0"